--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ dependencies = [
     "python-dotenv (>=1.0.1,<2.0.0)",
     "greenlet (>=3.1.1,<4.0.0)",
     "redis (>=5.2.1,<6.0.0)",
+    "pyjwt (>=2.10.1,<3.0.0)",
+    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
 ]
 
 
