--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "KashnykovAnton",email = "kashnykov.anton@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.13,<4.0"
 dependencies = [
     "sqlalchemy (==2.0.31)",
     "alembic (==1.13.2)",
@@ -18,6 +18,11 @@ dependencies = [
     "redis (>=5.2.1,<6.0.0)",
     "pyjwt (>=2.10.1,<3.0.0)",
     "passlib[bcrypt] (>=1.7.4,<2.0.0)",
+    "apscheduler (>=3.11.0,<4.0.0)",
+    "slowapi (>=0.1.9,<0.2.0)",
+    "fastapi-mail (>=1.4.2,<2.0.0)",
+    "libgravatar (>=1.0.4,<2.0.0)",
+    "cloudinary (>=1.43.0,<2.0.0)"
 ]
 
 
