--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,10 @@ dependencies = [
     "slowapi (>=0.1.9,<0.2.0)",
     "fastapi-mail (>=1.4.2,<2.0.0)",
     "libgravatar (>=1.0.4,<2.0.0)",
-    "cloudinary (>=1.43.0,<2.0.0)"
+    "cloudinary (>=1.43.0,<2.0.0)",
+    "uvicorn (>=0.29.0,<0.30.0)",
+    "python-multipart>=0.0.6,<1.0.0",
+    "psycopg2-binary>=2.9.9"
 ]
 
 
